# pyside-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci-test.yml  docs.yml  publish-to-pypi.yml
docker/: README.md  docker-compose.yml
docs/: README.md  changelog.md  changelog.rst  conf.py  contributing.md  contributing.rst  data.md  index.rst  installation.md  installation.rst  introduction.md  introduction.rst  troubleshooting.md  usage.md  usage.rst
docs/_static/: README.md
docs/_templates/: README.md
docs/modules/: db.rst  gui.rst  index.rst  main.rst  theme.rst
pyside-demo/: __main__.py  database.py  gui.py
pyside_demo/: __main__.py  pyside_demo.pyproject
pyside_demo/db/: database.py  sql.py
pyside_demo/gui/: data.py  dialog.py  graph.py  home.py  settings.py  sidebar.py  table.py  theme.py  ui_mainwindow.py  window.py  window_new.py  window_old.py
pyside_demo/model/: table.py
pyside_demo/resources/: mainwindow.ui  resources.qrc
pyside_demo/theme/: dark.qss  theme.py
tests/: test_database.py
