[tool.poetry]
name = "pyside-demo"
version = "0.1.0"
description = "Offline-first GUI application with PostgreSQL synchronization"
repository = "https://github.com/jiriklic/pyside-demo"
authors = ["Jiri Klic <web@jiriklic.com>"]
license = "MIT"
readme = "README.md"
keywords = [
    "PySide6",
    "Offline-first",
    "GUI"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pyside6 = "^6.7.2"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
